add build support to windows system
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@5710 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -190,8 +190,9 @@
 
     <!-- must either reload axis or GET the AxisServlet page before deleting
          the extracted temp Wsf*.class files. -->
-    <get src="${webServiceBaseUrl}/servlet/AxisServlet" dest="/dev/null"/>
-
+    <get src="${webServiceBaseUrl}/servlet/AxisServlet" dest="${targetDir}/temp.html"/>
+    <delete file="${targetDir}/temp.html" quiet="yes" />
+    
     <chmod dir="${webappTargetDir}/WEB-INF" perm="755"/>
 
     <delete includeEmptyDirs="true" quiet="true">
