use default config files when needed
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@5758 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/Service/config/wsf-context.xml.sample
+++ b/Service/config/wsf-context.xml.sample
@@ -1,4 +1,12 @@
 <!-- The contents of this file will be loaded for each web application -->
-<Context docBase="<your_wsf_web_service_path>">
+<Context docBase="@webappTargetDir@"
+         path="wsf"
+         swallowOutput="true">
+         
+    <Logger verbosity="2"
+            className="org.apache.catalina.logger.FileLogger"
+            directory="@targetDir@/logs"
+            prefix="wsf-"
+            timestamp="true"/>
 
 </Context>
