use default context file
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@5768 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -241,7 +241,11 @@
   </target>
  
   <target name="copyContextXml" unless="context.xml.exist">
-    <copy file="${targetDir}/config/wsf-context.xml.sample" toFile="${targetDir}/config/wsf-context.xml"/>
+    <filter token="targetDir" value="${targetDir}"/>
+    <filter token="webappTargetDir" value="${webappTargetDir}"/>
+    <copy file="${targetDir}/config/wsf-context.xml.sample" 
+          toFile="${targetDir}/config/wsf-context.xml"
+          filtering="true"/>
   </target>
 
   
