--- a/Plugin/.classpath
+++ b/Plugin/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/java/axis-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/java/servlet-api-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/java/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/java/commons-cli-1.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
