--- a/Plugin/.project
+++ b/Plugin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WSF - Plugin</name>
+	<name>WSF Plugin</name>
 	<comment></comment>
 	<projects>
 	</projects>
