--- a/Test/.project
+++ b/Test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WSF Service</name>
+	<name>WSF Test</name>
 	<comment></comment>
 	<projects>
 	</projects>
