refactor WSF to remove the plugin dependency on server container
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/branches/spanlogic@8224 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/Service/.classpath
+++ b/Service/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/WSF Plugin"/>
 	<classpathentry kind="lib" path="lib/java/jaxrpc-1.4.jar"/>
 	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="lib/java/axis-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/java/not-deployed/servlet-api-2.4.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
