remove the generated client stub
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/branches/spanlogic@8233 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,7 @@
     </java>
         
     <delete file="../WSF/Client/src/java/org/gusdb/wsf/service/WsfService.java" />
+    <delete file="../WSF/Client/src/java/org/gusdb/wsf/plugin/WsfRequest.java" />
           
     <move file="../WSF/Client/src/java/org/gusdb/wsf/client/deploy.wsdd" 
           tofile="${targetDir}/config/wsfService-deploy.wsdd" />
