--- a/build.xml
+++ b/build.xml
@@ -199,6 +199,13 @@
     <!-- temporary write permissions for server-config.wsdd -->
     <chmod dir="${webappTargetDir}/WEB-INF" perm="777"/>
 
+    <path id="classpath">
+      <pathelement path="${classpath}" />
+      <fileset dir="${targetDir}/lib/java">
+        <include name="**/*.jar"/>
+      </fileset>
+    </path>
+
     <java classname="org.apache.axis.client.AdminClient" 
           fork="true">
       <classpath refid="classpath" />
@@ -259,6 +266,13 @@
 
     <!-- temporary write permissions for server-config.wsdd -->
     <chmod dir="${webappTargetDir}/WEB-INF" perm="777"/>
+
+    <path id="classpath">
+      <pathelement path="${classpath}" />
+      <fileset dir="${targetDir}/lib/java">
+        <include name="**/*.jar"/>
+      </fileset>
+    </path>
            
     <java classname="org.apache.axis.client.AdminClient" fork="true">
       <classpath refid="classpath" />
