fix eclipse jar dependencies.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@12311 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/Test/.classpath
+++ b/Test/.classpath
@@ -4,8 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WSF Plugin"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WSF Service"/>
-	<classpathentry kind="lib" path="lib/java/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="/WSF Service/lib/java/jaxrpc-1.4.jar"/>
+	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/WSF Plugin/lib/java/junit-4.10.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
