--- a/Plugin/.classpath
+++ b/Plugin/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/java/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="lib/java/commons-cli-1.1.jar" sourcepath="C:/Develop/Java/Apache/maven-repo/commons-cli/commons-cli/1.1/commons-cli-1.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/java/commons-cli-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/java/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
