--- a/Plugin/.classpath
+++ b/Plugin/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/java/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/java/log4j-1.2.17.jar"/>
+        <classpathentry kind="lib" path="lib/java/org.json-chargebee-1.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
