--- a/Service/.classpath
+++ b/Service/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/java/axis-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/java/not-deployed/servlet-api-2.5.jar"/>
 	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/WSF Plugin/lib/java/org.json-chargebee-1.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
