--- a/Test/.classpath
+++ b/Test/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="/WSF Service/lib/java/jaxrpc-1.4.jar"/>
 	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="/WSF Plugin/lib/java/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="/WSF Service/lib/java/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/WSF Service/lib/java/commons-discovery-0.2.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
