--- a/Service/.classpath
+++ b/Service/.classpath
@@ -3,10 +3,11 @@
 	<classpathentry excluding="org/gusdb/wsf/test/WsfPortalClientTest.java" kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WSF Plugin"/>
-	<classpathentry kind="lib" path="lib/java/jaxrpc-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/java/axis-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/java/not-deployed/servlet-api-2.5.jar"/>
 	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="/WSF Plugin/lib/java/org.json-chargebee-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/java/javax.ws.rs-api-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/java/jersey-common.jar"/>
+	<classpathentry kind="lib" path="lib/java/jersey-container-servlet-core.jar"/>
+	<classpathentry kind="lib" path="lib/java/jersey-server.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
