--- a/Client/.classpath
+++ b/Client/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/WSF Service"/>
 	<classpathentry kind="lib" path="lib/java/jersey-client.jar"/>
 	<classpathentry kind="lib" path="/WSF Service/lib/java/javax.ws.rs-api-2.0.jar"/>
+	<classpathentry kind="lib" path="/WSF Plugin/lib/java/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
