Add maven installation to WSF
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/branches/maven-conversion@14232 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -41,6 +41,7 @@
   <!-- oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo -->
 
   <target name="WSF-Installation" depends="FgpUtil-Installation,
+                                           WSF-MavenInstallation,
                                            WSF/Client-Installation,
                                            WSF/Plugin-Installation,
                                            WSF/Core-Installation">
@@ -53,6 +54,24 @@
   
 
  <!-- ooooooooooooooooooooooo  Install Components  ooooooooooooooooooooooo -->
+
+  <target name="WSF-MavenInstallation">
+    <ant target="mavenCleanInstall">
+      <property name="project" value="WSF"/>
+    </ant>
+    <ant target="deployMavenArtifacts">
+      <property name="project" value="WSF"/>
+      <property name="component" value="Client"/>
+    </ant>
+    <ant target="deployMavenArtifacts">
+      <property name="project" value="WSF"/>
+      <property name="component" value="Plugin"/>
+    </ant>
+    <ant target="deployMavenArtifacts">
+      <property name="project" value="WSF"/>
+      <property name="component" value="Core"/>
+    </ant>
+  </target>
 
   <target name="WSF/Plugin-Installation" depends="WSF/Client-Installation">
 
