refactor WSF's dependencies.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@14279 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/Plugin/pom.xml
+++ b/Plugin/pom.xml
@@ -8,16 +8,12 @@
     <version>1.0.0</version>
   </parent>
   
-  <name>Web Service Framework: Plugin API</name>
-  <artifactId>wsf-plugin-api</artifactId>
+  <name>Web Service Framework: Plugin</name>
+  <artifactId>wsf-plugin</artifactId>
   <packaging>jar</packaging>
 
   <dependencies>
 
-    <dependency>
-      <groupId>org.gusdb</groupId>
-      <artifactId>wsf-client-api</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>org.gusdb</groupId>
@@ -39,6 +35,10 @@
       <artifactId>junit</artifactId>
     </dependency>
 
+    <dependency>
+    	<groupId>org.gusdb</groupId>
+    	<artifactId>wsf-common</artifactId>
+    </dependency>
   </dependencies>
 
   <!-- Final name should not matter except to eclipse
