--- a/Common/.project
+++ b/Common/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WSF Common</name>
+	<name>wsf-common</name>
 	<comment></comment>
 	<projects>
 	</projects>
