Attempt to fix QA build problem
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@14326 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,19 @@
         <groupId>org.gusdb</groupId>
         <artifactId>wsf-common</artifactId>
         <version>${project.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.gusdb</groupId>
         <artifactId>wsf-plugin</artifactId>
         <version>${project.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.gusdb</groupId>
         <artifactId>wsf-service</artifactId>
         <version>${project.version}</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.gusdb</groupId>
