--- a/Plugin/pom.xml
+++ b/Plugin/pom.xml
@@ -14,6 +14,10 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>org.gusdb</groupId>
+      <artifactId>wsf-common</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.gusdb</groupId>
@@ -33,12 +37,9 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
 
-    <dependency>
-    	<groupId>org.gusdb</groupId>
-    	<artifactId>wsf-common</artifactId>
-    </dependency>
   </dependencies>
 
   <!-- Final name should not matter except to eclipse
