update custom repo in poms
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/branches/purge-svn@25452 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <url>https://code.google.com/p/strategies-wdk</url>
   <artifactId>wsf</artifactId>
   <packaging>pom</packaging>
-  
+
   <modules>
     <module>Common</module>
     <module>Plugin</module>
@@ -14,7 +14,7 @@
     <module>Client</module>
     <module>MockPlugin</module>
   </modules>
-  
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -53,7 +53,7 @@
       <id>eupathdb</id>
       <name>EuPathDB Project Dependencies</name>
       <layout>default</layout>
-      <url>https://cbilsvn.pmacs.upenn.edu/svn/gus/FgpUtil/trunk/Dependencies/</url>
+      <url>https://raw.githubusercontent.com/EuPathDB/FgpUtil/master/Dependencies/</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
